@@ -1,3 +1,4 @@
 /packagecache/
 
+/fmt-*/
 /googletest-*/
