@@ -1,0 +1,12 @@
+[wrap-file]
+directory = fmt-7.1.3
+source_url = https://github.com/fmtlib/fmt/archive/7.1.3.tar.gz
+source_filename = fmt-7.1.3.tar.gz
+source_hash = 5cae7072042b3043e12d53d50ef404bbb76949dad1de368d7f993a15c8c05ecc
+patch_url = https://wrapdb.mesonbuild.com/v1/projects/fmt/7.1.3/1/get_zip
+patch_filename = fmt-7.1.3-1-wrap.zip
+patch_hash = 6eb951a51806fd6ffd596064825c39b844c1fe1799840ef507b61a53dba08213
+
+[provide]
+fmt = fmt_dep
+
